--- a/UI/css/customerdashboard.css
+++ b/UI/css/customerdashboard.css
@@ -74,6 +74,7 @@ table {
     border-collapse: collapse;
     font-family: arial, sans-serif;
     width: 100%;
+    margin-left: 5%;
     
 }
 td {
