--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -2,6 +2,7 @@ body {
     background-color: aquamarine;
     background-image: url('../images/background.jpg');
     background-size: cover;
+    overflow-x: hidden;
 }
 .access-button {
     display: flex;
@@ -36,7 +37,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 75vw;
+    width: 78vw;
     padding: 2% 10% 5% 10%;
 }
 .header {
@@ -132,6 +133,7 @@ body {
         background-size: cover;
     }
     .banner {
+        width: 98%;
         margin-left: 1px;
         margin-right: 1px;
     }
@@ -141,8 +143,7 @@ body {
         
     }
     .container{
-        width: 100%;
-        height: 100%;
+        width:71vw;
         padding: 3px 5px 3px 5px;
         margin-right: 5%
     }
@@ -200,6 +201,7 @@ and (max-width:1000px) {
         background-size: cover;
     }
     .banner {
+        width: 98%;
         margin-left: 1px;
         margin-right: 1px;
     }
@@ -209,8 +211,7 @@ and (max-width:1000px) {
         
     }
     .container{
-        width: 100%;
-        height: 100%;
+        height: 100vh;
         padding: 3px 5px 3px 5px;
         margin-right: 5%
     }
